--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ res/raw/lpconfig.xsd
 **/.project
 **/*.kdev4
 **/.vscode
+res/value-hi_IN
 linphone-sdk-android/*.aar
 app/release
 keystore.properties
