preparation for google play
v1.0 ready for goodle play .

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 // Signing APK Release
-RELEASE_STORE_FILE=""
-RELEASE_STORE_PASSWORD=
-RELEASE_KEY_ALIAS=
-RELEASE_KEY_PASSWORD=
+RELEASE_STORE_FILE="/Users/adnanquraishi/Desktop/ANDROID_APPS/Jirtuu_Android/jirtuu/app/keystore"
+RELEASE_STORE_PASSWORD=jirtuu
+RELEASE_KEY_ALIAS=jirtuu
+RELEASE_KEY_PASSWORD=jirtuu
 #source:https://docs.gradle.org/current/userguide/build_environment.html#sec:configuring_jvm_memory
 org.gradle.jvmargs=-Xmx2g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 android.useAndroidX=true
