--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,12 +77,12 @@ android {
         abortOnError false
     }
 
-    compileSdkVersion 29
+    compileSdkVersion 30
     defaultConfig {
         minSdkVersion 23
-        targetSdkVersion 29
-        versionCode 4300
-        versionName "${project.version}"
+        targetSdkVersion 30
+        versionCode 1
+        versionName "1.0"
         applicationId getPackageName()
         multiDexEnabled true
     }
